MyFirstIDEProject/src/objects/Equipment__c.object
<CustomObject>
    <description>Equipmets of which IT team keeps track of</description>
    <fields>
        <fullName>ModelController__c</fullName>
        <label>ModelController</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop_model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>laptop_model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>phone_model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tablet_model</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model of the equipment</description>
        <inlineHelpText>Model of the equipment</inlineHelpText>
        <label>Model</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Apple Powerbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell Inspirion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Pavillion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung Galaxy 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung Tablet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <formula>IF( ISBLANK( User__c ) , &quot;IT Dept&quot;,  User__r.Department)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Serial number of the equipment</description>
        <inlineHelpText>Serial number of the equipment</inlineHelpText>
        <label>Serial Number</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the equipment</description>
        <inlineHelpText>Type of the equipment</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User for this equipment</description>
        <inlineHelpText>User for this equipment</inlineHelpText>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IT Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>masterAccount__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>